fixed stupid z-index issue

--- a/site/styles.css
+++ b/site/styles.css
@@ -2,12 +2,16 @@ html {
   font-family: monospace;
   color: white;
   background-color: #000000;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .title {
   font-weight: 700;
   font-size: 2vw;
   color: aqua;
+  z-index: 11;
 }
 
 .textbox {
@@ -15,7 +19,7 @@ html {
   position: absolute;
   top: 15vw;
   left: 5vw;
-  z-index: 200;
+  z-index: 20;
 }
 
 #moon-data {
@@ -23,11 +27,11 @@ html {
   background-color: rgba(255, 255, 255, 0.05);
   padding: 2.5vw;
   border-radius: 1vw;
-  animation: moon-data-grow .5s ease-out;
+  animation: moon-data-grow 0.5s ease-out;
 }
 
 .next-full-moon {
-  color: aqua!important;
+  color: aqua !important;
 }
 
 @keyframes moon-data-grow {
@@ -35,13 +39,13 @@ html {
     transform: scaleX(0);
   }
   33% {
-    transform: scaleX(.33);
+    transform: scaleX(0.33);
   }
   50% {
-    transform: scaleX(.5);
+    transform: scaleX(0.5);
   }
   75% {
-    transform: scaleX(.75);
+    transform: scaleX(0.75);
   }
   85% {
     transform: scaleX(1.05);
@@ -64,14 +68,21 @@ html {
 #moon-cover {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.75);
-  height: 35vw;
+  height: 75vw;
   padding: 5vw;
-  width: 35vw;
-  border-radius: 100%;
-  z-index: 100;
+  width: 50vw;
+  border-radius: 50%;
+  z-index: 10;
   top: 2.5vw;
   visibility: hidden;
   animation: moon-cover 1.5s;
+  clear: both;
+  display: inline-block;
+}
+
+.moon-cover-container {
+  clear: both;
+  display: inline-block;
 }
 
 @keyframes moon-cover {
@@ -79,27 +90,109 @@ html {
     width: 0vw;
   }
   to {
-    width: 35vw;
+    width: 50vw;
   }
 }
 
-.first-quarter {
+/* WAXING STAGES */
+
+.waxing-ten-percent {
+  left: 15vw;
+  visibility: visible !important;
+}
+
+.waxing-twenty-percent {
   left: 10vw;
   visibility: visible !important;
 }
 
-.last-quarter {
+.waxing-thirty-percent {
+  left: 5vw;
+  visibility: visible !important;
+}
+
+.waxing-fourty-percent {
+  left: -0vw;
+  visibility: visible !important;
+}
+
+.waxing-sixty-percent {
+  left: -10vw;
+  visibility: visible !important;
+}
+
+.waxing-seventy-percent {
+  left: -15vw;
+  visibility: visible !important;
+}
+
+.waxing-eighty-percent {
+  left: -20vw;
+  visibility: visible !important;
+}
+
+.waxing-ninety-percent {
+  left: -25vw;
+  visibility: visible !important;
+}
+
+/* WANING STAGES */
+
+.waning-ten-percent {
+  right: 15vw;
+  visibility: visible !important;
+}
+
+.waning-twenty-percent {
   right: 10vw;
+  visibility: visible !important;
+}
+
+.waning-thirty-percent {
+  right: 5vw;
+  visibility: visible !important;
+}
+
+.waning-fourty-percent {
+  right: -0vw;
+  visibility: visible !important;
+}
+
+.waning-sixty-percent {
+  right: -10vw;
+  visibility: visible !important;
+}
+
+.waning-seventy-percent {
+  right: -15vw;
+  visibility: visible !important;
+}
+
+.waning-eighty-percent {
+  right: -20vw;
+  visibility: visible !important;
+}
+
+.waning-ninety-percent {
+  right: -25vw;
+  visibility: visible !important;
+}
+
+/* MAIN PHASES OF MOON (FULL EXCLUDED AS FULL IS DEFAULT) */
+
+.first-quarter {
+  left: -5vw;
+  visibility: visible !important;
+}
+
+.last-quarter {
+  right: -5vw;
   visibility: visible !important;
 }
 
 .new-moon {
   right: 27vw;
   visibility: visible !important;
-}
-
-.light-first-bracket {
-
 }
 
 @media only screen and (max-width: 1200px) {
@@ -119,20 +212,6 @@ html {
 
   .asciimoon {
     font-size: 0.75vw;
-  }
-
-  #moon-cover {
-    height: 60vw;
-    width: 40vw;
-  }
-
-  @keyframes moon-cover {
-    from {
-      width: 0vw;
-    }
-    to {
-      width: 40vw;
-    }
   }
 
   #moon-data {
